--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 - name: Setup reverse proxy sites
   ansible.builtin.template:
-    src: reverse_proxy.js
+    src: reverse_proxy.j2
     dest: /etc/caddy/conf.d/{{ site['domain_name'] }}.caddy
     owner: root
     group: root
     mode: 0644
-  loop: caddy_sites_reverse_proxy
+  loop: "{{ caddy_sites_reverse_proxy }}"
   loop_control:
     loop_var: site
 
