--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,7 +6,7 @@
     owner: root
     group: root
     mode: 0644
-  loop: "{{ caddy_sites_reverse_proxy }}"
+  loop: "{{ caddy_sites_reverse_proxy | default([]) }}"
   loop_control:
     loop_var: site
 
@@ -17,7 +17,7 @@
     owner: root
     group: root
     mode: 0644
-  loop: "{{ caddy_sites_redirect }}"
+  loop: "{{ caddy_sites_redirect | default([]) }}"
   loop_control:
     loop_var: site
 
